#refine code#